--- a/app/src/main/res/layout/fragment_kintai_report.xml
+++ b/app/src/main/res/layout/fragment_kintai_report.xml
@@ -1,13 +1,25 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    xmlns:android-bootstrap="http://schemas.android.com/apk/res-auto"
     tools:context="net.numa08.kintaicollection.app.KintaiReportFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
-</FrameLayout>
+    <com.beardedhen.androidbootstrap.BootstrapButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android-bootstrap:bb_type="primary"
+        android:text="@string/syussya"
+        android:padding="@dimen/padding_medium"
+        />
+    <com.beardedhen.androidbootstrap.BootstrapButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android-bootstrap:bb_type="danger"
+        android:text="@string/taisya"
+        android:padding="@dimen/padding_medium"
+        />
+</LinearLayout>
