--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,5 +7,14 @@
         android:id="@+id/kintaiReportFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:name="net.numa08.kintaicollection.app.KintaiReportFragment"/>
+        android:name="net.numa08.kintaicollection.app.KintaiReportFragment"
+        android:layout_alignParentTop="true"
+        />
+    <fragment
+        android:id="@+id/kintaiListFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:name="net.numa08.kintaicollection.app.KintaiListFragmentFragment"
+        android:layout_below="@id/kintaiReportFragment"
+        android:layout_alignParentBottom="true"/>
 </RelativeLayout>
