--- a/app/src/main/res/layout/fragment_kintai_report.xml
+++ b/app/src/main/res/layout/fragment_kintai_report.xml
@@ -1,10 +1,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/kintai_report_height"
     android:orientation="horizontal"
     xmlns:android-bootstrap="http://schemas.android.com/apk/res-auto"
-    tools:context="net.numa08.kintaicollection.app.KintaiReportFragment">
+    tools:context="net.numa08.kintaicollection.app.KintaiReportFragment"
+    android:gravity="center_vertical"
+    >
 
     <com.beardedhen.androidbootstrap.BootstrapButton
         android:layout_width="wrap_content"
@@ -12,7 +14,8 @@
         android:layout_weight="1"
         android-bootstrap:bb_type="primary"
         android:text="@string/syussya"
-        android:padding="@dimen/padding_medium"
+        android:textSize="@dimen/text_medium"
+        android:padding="@dimen/padding_common"
         />
     <com.beardedhen.androidbootstrap.BootstrapButton
         android:layout_width="wrap_content"
@@ -20,6 +23,7 @@
         android:layout_weight="1"
         android-bootstrap:bb_type="danger"
         android:text="@string/taisya"
-        android:padding="@dimen/padding_medium"
+        android:textSize="@dimen/text_medium"
+        android:padding="@dimen/padding_common"
         />
 </LinearLayout>
