--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="padding_common">8dp</dimen>
     <dimen name="kintai_report_height">144dp</dimen>
     <dimen name="text_medium">18sp</dimen>
+    <dimen name="kintai_tl_row_height">64dp</dimen>
 </resources>
