--- a/app/src/main/res/layout/fragment_kintai_report.xml
+++ b/app/src/main/res/layout/fragment_kintai_report.xml
@@ -9,6 +9,7 @@
     >
 
     <com.beardedhen.androidbootstrap.BootstrapButton
+        android:id="@+id/syussyaButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -18,6 +19,7 @@
         android:padding="@dimen/padding_common"
         />
     <com.beardedhen.androidbootstrap.BootstrapButton
+        android:id="@+id/taisyaButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
