--- a/app/src/main/res/menu/authoricate.xml
+++ b/app/src/main/res/menu/authoricate.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="net.numa08.kintaicollection.app.AuthoricateActivity" >
+    tools:context="net.numa08.kintaicollection.app.AuthenticateActivity" >
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
