--- a/app/src/main/res/layout/fragment_kintai_report.xml
+++ b/app/src/main/res/layout/fragment_kintai_report.xml
@@ -7,6 +7,7 @@
     tools:context="net.numa08.kintaicollection.app.KintaiReportFragment"
     android:gravity="center_vertical"
     android:id="@+id/layoutFrame"
+    android:background="@color/report_background"
     >
 
     <Space
