--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
@@ -6,4 +8,6 @@
     <dimen name="kintai_report_height">144dp</dimen>
     <dimen name="text_medium">18sp</dimen>
     <dimen name="kintai_tl_row_height">64dp</dimen>
+    <dimen name="widget_margin">8dp</dimen>
+
 </resources>
