ウィジェットで投稿ができるようになった

--- a/app/src/main/res/layout/kintai_report_widget.xml
+++ b/app/src/main/res/layout/kintai_report_widget.xml
@@ -6,21 +6,23 @@
     >
 
     <Button
+        android:id="@+id/syussyaButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="@string/syussya"
         android:textColor="@android:color/white"
         android:textSize="@dimen/text_medium"
-        android:background="@color/bbutton_primary"
+        android:background="@drawable/bbuton_primary_rounded"
         />
     <Button
+        android:id="@+id/taisyaButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="@string/taisya"
         android:textSize="@dimen/text_medium"
         android:textColor="@android:color/white"
-        android:background="@color/bbutton_danger"
+        android:background="@drawable/bbuton_danger_rounded"
         />
 </LinearLayout>
